@@ -34,13 +34,13 @@ import com.microsoft.identity.common.adal.internal.AuthenticationConstants.Broke
 import com.microsoft.identity.common.exception.BrokerCommunicationException;
 import com.microsoft.identity.common.logging.Logger;
 
-import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.experimental.Accessors;
 
 import static com.microsoft.identity.common.exception.BrokerCommunicationException.Category.OPERATION_NOT_SUPPORTED_ON_CLIENT_SIDE;
 import static com.microsoft.identity.common.internal.broker.ipc.IIpcStrategy.Type.ACCOUNT_MANAGER_ADD_ACCOUNT;
 import static com.microsoft.identity.common.internal.broker.ipc.IIpcStrategy.Type.CONTENT_PROVIDER;
+import static com.microsoft.identity.common.internal.cache.ActiveBrokerCacheUpdater.KEY_REQUEST_ACTIVE_BROKER_DATA;
 
 
 public class BrokerOperationBundle {
@@ -97,7 +97,9 @@ public class BrokerOperationBundle {
                                  @Nullable final Bundle bundle) {
         this.operation = operation;
         this.targetBrokerAppPackageName = targetBrokerAppPackageName;
-        this.bundle = bundle;
+        this.bundle = bundle != null ? bundle : new Bundle();
+        this.bundle.putBoolean(KEY_REQUEST_ACTIVE_BROKER_DATA, true);
+        Logger.info(TAG, "Requested Active Broker Data");
     }
 
 
